fix(board tile gridsquare): found and fixed bug where a gridsize > 10 would break the client
Discovered bug in way my row and col numbers for the matrix were being obtained and implemented a
fix. Also added overflow to the grid window, but scrollable elements nested within drag/drop are
currently not supported, so it may or may not behave like a drunk toddler

--- a/styles/Room.module.css
+++ b/styles/Room.module.css
@@ -14,11 +14,9 @@
   border: solid 1px #000;
 } */
 
-/* .gameBoard {
-  width: 70vw;
-  height: 70vh;
-  background-color: white;
-} */
+.gameBoard {
+  overflow: auto;
+}
 
 .gameRow {
   height: 60px;
